[tool.poetry]
name = "minlizhash"
version = "0.2.1"
description = "A simple MinHash LSH Implimentation from scratch"
authors = ["Liz Goodwin <work@lizgood.win>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.1"
xxhash = "^3.4.1"
tdqm = "^0.0.1"
tiktoken = "^0.5.1"
jsonlines = "^4.0.0"
types-tqdm = "^4.66.0.3"
numba = "^0.58.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
